# rsdns

./: .gitignore  Cargo.toml
cmd/: Cargo.toml
cmd/src/: main.rs
src/: lib.rs
src/components/: mod.rs
src/dns/: compress_list.rs  dns.rs  header.rs  labels.rs  mod.rs  pseudo_rr.rs  question.rs  rr.rs
src/elements/: mod.rs
src/util/: mod.rs
test_dns_raw/Facebook.com/: 10_1  10_2  10_255  10_3  10_4  11_1  11_2  11_255  11_3  11_4  12_1  12_2  12_255  12_3  12_4  13_1  13_2  13_255  13_3  13_4  14_1  14_2  14_255  14_3  14_4  15_1  15_2  15_255  15_3  15_4  16_1  16_2  16_255  16_3  16_4  1_1  1_2  1_255  1_3  1_4  (+60 more)
test_dns_raw/Microsoft.com/: 1_1  1_2  1_255  1_3  1_4  2_1  2_2  2_255  2_3  2_4  3_1  3_2  3_255  3_3  3_4  4_1  4_2  4_255  4_3  4_4  5_1  5_2  5_255  5_3  5_4  6_1  6_2  6_3
test_dns_raw/Naver.com/: 10_1  10_2  10_255  10_3  10_4  11_1  11_2  11_255  11_3  11_4  12_1  12_2  12_255  12_3  12_4  13_1  13_2  13_255  13_3  13_4  14_1  14_2  14_255  14_3  14_4  15_1  15_2  15_255  15_3  15_4  16_1  16_2  16_255  16_3  16_4  1_1  1_2  1_255  1_3  1_4  (+60 more)
test_dns_raw/YouTube.com/: 10_1  10_2  10_255  10_3  10_4  11_1  11_2  11_255  11_3  11_4  12_1  12_2  12_255  12_3  12_4  13_1  13_2  13_255  13_3  13_4  14_1  14_2  14_255  14_3  14_4  15_1  15_2  15_255  15_3  15_4  16_1  16_2  16_255  16_3  16_4  1_1  1_2  1_255  1_3  1_4  (+60 more)
test_dns_raw/amazon.com/: 10_1  10_2  10_255  10_3  10_4  11_1  11_2  11_255  11_3  11_4  12_1  12_2  12_255  12_3  12_4  13_1  13_2  13_255  13_3  13_4  14_1  14_2  14_255  14_3  14_4  15_1  15_2  15_255  15_3  15_4  16_1  16_2  (+68 more)
(+3147 files in other folders)
