[package]
name = "rsdns"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
nom = "7.1.3"
rsbit = { git = "https://github.com/youngbloood/rsbit.git", version = "0.1.*" }
rand = "*"
once_cell = "*"
base64 = "*"
rust-crypto = "*"
sha1 = { version = "0.10.6", features = ["oid"] }
hex-literal = "0.4.1"
rsa = "0.9.6"
sha256 = "*"
sha2 = "*"
dsa = "0.6.2"
rand_chacha = "0.3.1"
tokio = { version = "1.35.1", features = ["full"] }
bytes = "1.5.0"
